fix header on mobile

--- a/source/stylesheets/toolkit-startup.css
+++ b/source/stylesheets/toolkit-startup.css
@@ -96,6 +96,17 @@ body {
   #title_message {
     display:none;
   }
+  #top_image{
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+  }
+  #left-line{
+    font-size: 20px;
+  }
+
   #mobile_enter {
     width:auto;
   }
